<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_layout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:showIn="@layout/activity_feed">

    <android.support.design.widget.TabItem
        android:text="@string/husky"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <android.support.design.widget.TabItem
        android:text="@string/hound"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <android.support.design.widget.TabItem
        android:text="@string/pug"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <android.support.design.widget.TabItem
        android:text="@string/labrador"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</android.support.design.widget.TabLayout>