<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpActivity">

    <RelativeLayout
        android:id="@+id/signup_background_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/labrador_wallpaper"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlackOverlay">
        </View>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title1"
            android:textColor="@color/colorWhite"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title2"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="8dp"
            android:textSize="38sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">



        <!-- Dummy item to prevent TextInputLayout from receiving focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>
        
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Edt.Text"
            android:textColorHint="@color/colorWhite"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp">


            <EditText
                android:id="@+id/enter_email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:theme="@style/Theme.Edt.Text"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
        


        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/enter_button_bg_shape"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorWhite"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <include layout="@layout/loading_layout" />

</RelativeLayout>





